--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,6 @@ th{
 }
 
 
-
-/* h2{
-    font-family: arial;
-    font-weight: 700;
-    text-align: left;
-    margin-bottom: 7px;
-} */
-
 .header_row{
   background-color: white;
   margin-bottom: 20px;
@@ -73,8 +65,6 @@ th{
 }
 
 
-
-
 .content_teams{
 
   display: inline-block;
@@ -85,10 +75,6 @@ th{
   background-color: #fff;
   border-left: 1px #eee solid;
   margin-left: -2px;
-
-
-
-
 }
 
 .content_books{
@@ -101,3 +87,17 @@ th{
   border-left: 1px #eee solid;
   margin-left: -2px;
 }
+
+
+.navbar{
+ background-color: #222;
+ height: 54px;
+
+}
+
+.navIcon{
+  height: 54px;
+  max-width: 180px;
+  margin : auto;
+  width : 50%;
+  }
